--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
-    "prisma": "^5.1.1"
+    "prisma": "^5.1.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
