--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "prisma": "^5.1.1",
     "swagger-jsdoc": "^6.2.8",
