--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "prisma": "^5.1.1",
     "swagger-jsdoc": "^6.2.8",
