--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -29,37 +29,30 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.2.1
+  cupertino_icons: ^1.0.2
+  dio: ^5.3.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  flutter_riverpod: ^2.0.0
-  go_router: ^10.0.0
-  cached_network_image: ^3.2.1
-  freezed: ^2.1.1
-  dio: ^5.3.2
-  hive_flutter: ^1.1.0
-  flutter_screenutil: ^5.7.0
-  flutter_launcher_icons: ^0.13.1
-  flutter_svg: ^2.0.7
-  overlay_support: ^2.1.0
-  intl: ^0.18.1
   flutter_dotenv: ^5.1.0
+  flutter_launcher_icons: ^0.13.1
+  flutter_riverpod: ^2.0.0
+  flutter_screenutil: ^5.7.0
+  flutter_svg: ^2.0.7
+  freezed: ^2.1.1
+  go_router: ^10.0.0
+  hive_flutter: ^1.1.0
+  intl: ^0.18.1
+  overlay_support: ^2.1.0
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
   build_runner: ^2.2.1
+  flutter_gen: ^5.3.0
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   mocktail: ^1.0.0
-  flutter_gen: ^5.3.0
 
 flutter_gen:
   integrations:
@@ -89,10 +82,8 @@ flutter:
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -106,6 +97,5 @@ flutter:
         - asset: assets/fonts/Poppins-Medium.ttf
         - asset: assets/fonts/Poppins-Regular.ttf
           style: italic
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
