--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  flutter_jailbreak_detection: ^1.10.0
   flutter_launcher_icons: ^0.13.1
   flutter_riverpod: ^2.0.0
   flutter_screenutil: ^5.7.0
