--- a/.github/workflows/__server_test.yml
+++ b/.github/workflows/__server_test.yml
@@ -34,21 +34,15 @@ jobs:
           cd server
           npm run test
 
+      - name: 🧪✅❌ Publish test results
+        uses: danhunsaker/clover-reporter-action@v0.2.17-clover
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          clover-file: .server/coverage/clover.xml
+          
+      - name: 🧪📊 Publish coverage report
+        uses: romeovs/lcov-reporter-action@v0.2.11
+        with:
+          lcov-file: ./server/coverage/lcov.info
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      #   Referensi Nanti
-      # - name: Publish Test Results
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: test-reports
-      #     path: server/test-results
-
-      # - name: Install lcov
-      #   run: |
-      #     sudo apt-get update
-      #     sudo apt-get -y install lcov
-
-      # - name: Publish Code Coverage
-      #   run: |
-      #     lcov -c -d server/coverage -o lcov.info
-      #     lcov -r lcov.info '/usr/*' 'node_modules/*' -o lcov_filtered.info
-      #     bash <(curl -s https://codecov.io/bash) -f lcov_filtered.info
