--- a/.github/workflows/__server_test.yml
+++ b/.github/workflows/__server_test.yml
@@ -11,35 +11,29 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-
       - name: Setup Node Js
         uses: actions/setup-node@v3
         with:
           node_version: 16
-
       - name: Install Dependencies
-        run: 
+        run: |
           cd server
           npm ci
-
       - name: Copy secrets to .env
         run: |
           cd server
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
           echo "DIRECT_URL=${{ secrets.DIRECT_URL }}" >> .env
           echo "ACCESS_TOKEN_SECRET=${{ secrets.ACCESS_TOKEN_SECRET }}" >> .env
-
       - name: Run Tests and Generate Coverage
-        run: 
+        run: |
           cd server
           npm run test
-
       - name: 🧪✅❌ Publish test results
         uses: danhunsaker/clover-reporter-action@v0.2.17-clover
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           clover-file: .server/coverage/clover.xml
-          
       - name: 🧪📊 Publish coverage report
         uses: romeovs/lcov-reporter-action@v0.2.11
         with:
